# os_project_sockets

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: technical_requirements.md
src/: models.cpp  models.h  server.cpp
